# jaccassseries

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: app.py  config.py  main.py
src/audio/: capture.py  output.py  vad.py
src/keyword/: spotter.py
src/llm/: client.py
src/pipeline/: orchestrator.py  streamer.py
src/stt/: transcriber.py
src/tts/: synthesizer.py
src/ui/: config_window.py  fab.py  tray.py
