[project]
name = "jacasseries"
version = "0.1.0"
description = "Voice interface for LLM — talk to your AI like you'd chat with a friend"
authors = [{ name = "Leon" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "sounddevice>=0.5",
    "faster-whisper>=1.1",
    "piper-tts>=1.2",
    "httpx[sse]>=0.27",
    "qtawesome>=1.4",
]

[project.optional-dependencies]
keyword = ["openwakeword"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
